--- a/LR4_Position/style.css
+++ b/LR4_Position/style.css
@@ -17,6 +17,31 @@
   background:white;
 }
 
+#block2 {
+  margin-top: 25px;
+  height: 300px; 
+  border: black;
+  border-style: dotted;
+  background:white;
+}
+
+#block3{
+  height: 300px;
+  margin-top: 25px;
+  border: black;
+  border-style: dotted;
+  background:white;
+}
+
+#block4 {
+  position: relative;
+  height: 700px;
+  margin-top: 25px;
+  border: black;
+  border-style: dotted;
+  background:white;
+  margin-bottom: 25px;
+}
 
 #one {
   position: relative;
@@ -40,4 +65,76 @@ top: 300px;
 left: 150px;
 border: green;
 border-style: solid;
+}
+
+#four {
+  position: relative;
+  top: 50px;
+  left: 100px;
+  background-color:yellow ;
+}
+
+#five {
+  position: relative;
+  top: 100px;
+  left: 50px;
+  background-color: wheat;
+}
+#six {
+  position: relative;
+  top: 150px;
+  left: 0px;
+  background-color:yellowgreen ;
+}
+
+#seven {
+  position: relative;
+  top: 50px;
+  left: 100px;
+  background-color:yellow ;
+}
+
+#eight {
+  z-index: 1;
+  position: relative;
+  top: 100px;
+  left: 50px;
+  background-color: wheat;
+}
+
+#nine {
+  position: relative;
+  top: 150px;
+  left: 0px;
+  background-color:yellowgreen ;
+}
+
+#ten {
+  position:absolute;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 90%;
+  height: 90%;
+  background-color: indianred;
+}
+
+#eleven {
+  position: absolute;
+  background-color: white;
+  top: 15%;
+  left: 10%;
+  width: 150px;
+  height: 150px;
+}
+
+#twelve {
+  position: absolute;
+  background-color: white;
+  top: 65%;
+  left: 80%;
+  width: 150px;
+  height: 150px;
 }
