--- a/LR4_Position/style.css
+++ b/LR4_Position/style.css
@@ -43,6 +43,15 @@
   margin-bottom: 25px;
 }
 
+#block5 {
+  position: relative;
+  height: 700px;;
+  border: black;
+  border-style: dotted;
+  background:green;
+  margin-bottom: 25px;
+}
+
 #one {
   position: relative;
   top: 50px;
@@ -137,4 +146,24 @@ border-style: solid;
   left: 80%;
   width: 150px;
   height: 150px;
+}
+#scroll {
+  position:absolute;
+  width: 100%;
+  height: 90%;
+  background-color: white;
+  overflow:scroll;
+  padding-top: 1%;
+  border: orange;
+  border-style: solid;
+
+}
+
+#text {
+  width: 100%;
+  text-align: center;
+}
+h1 {
+  text-align:center;
+  color:white;
 }
