--- a/landing/style.css
+++ b/landing/style.css
@@ -6,6 +6,12 @@
   text-decoration: none;
 }
 
+
+.text {
+  color: white;
+  margin-top: 10px;
+}
+
 .wrapper {
   background: linear-gradient(222.26deg, #3B1D60 1.22%, #040D3E 106.28%);
   width: 100vw;
@@ -38,7 +44,8 @@
   justify-content: start;
   justify-content: space-evenly;
   align-items: center;
-  justify-content: space-around;    
+  justify-content: space-around;
+
 }
 
 
