--- a/wildlife/style.css
+++ b/wildlife/style.css
@@ -12,10 +12,13 @@
   padding-top: 79px;
 }
 
-.header {
+.lisa {
   width: 100%;
   max-width: 1440px;
   height: 780px;
+}
+
+.header {
   display: flex;
   justify-content: space-around;
   font-family: Roboto;
@@ -75,4 +78,83 @@ a {
 }
 .menu__links1 {
   text-decoration: none;
+}
+.survival {
+  display: flex;
+  align-items: flex-end;
+  height:460px;
+  width: 395px;
+  justify-content: flex-end;
+}
+
+
+.survival-text {
+  width: 275px;
+  height: 340px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  
+}
+
+.title {
+  text-align: left;
+  width: 199px;
+  height: 72px;
+  color: rgba(205, 99, 38, 1);
+  display: flex;
+
+}
+
+.h1 {
+  font-family: Open Sans;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 72px;
+  letter-spacing: 2px;
+  color: rgba(205, 99, 38, 1);
+}
+
+
+.regular {
+
+  display: flex;
+  font-family: Open Sans;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 27px;
+  letter-spacing: 0em;
+  text-align: left;
+  
+  text-align: justify;
+  color:rgba(247, 247, 247, 1);
+  width: 274px;
+  height: 108px;
+
+}
+
+.Donate {
+  
+  text-align: left;
+  background: blue;
+  display: flex;
+  width: 160px;
+  height: 60px;
+  font-family: Roboto;
+  font-size: 23px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 27px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: rgba(247, 247, 247, 1);
+}
+
+.Donate1 {
+  background: rgba(205, 99, 38, 1);
+  border-radius: 5%;
+  width: 160px;
+  height: 60px;
 }
