--- a/wildlife/style.css
+++ b/wildlife/style.css
@@ -3,16 +3,20 @@
   margin: 0;
   list-style-type: none;
   box-sizing: border-box;
+
 }
 
 .wrapper {
+  z-index: -1;
   width: 100vw;
   display: flex;
   justify-content: center;
   padding-top: 79px;
+  background-color: #02160b
 }
 
 .lisa {
+  
   width: 100%;
   max-width: 1440px;
   height: 780px;
